--- a/QuickFun/QuickFun.Web/Pages/GamePage.razor
+++ b/QuickFun/QuickFun.Web/Pages/GamePage.razor
@@ -27,13 +27,13 @@
         <h1 class="game-title">@CurrentGame.Name</h1>
 
         <div class="game-content">
-            @if (CurrentGame is TicTacToeEngine ttt)
-            {
-                <TicTacToeView Engine="ttt" />
-            }
-            else if (CurrentGame is TicTacToeEngineWithAI tttai)
+            @if (CurrentGame is TicTacToeEngineWithAI tttai)
             {
                 <TicTacToeWithAIView Engine="tttai" />
+            }
+            else if (CurrentGame is TicTacToeEngine ttt)
+            {
+                <TicTacToeView Engine="ttt" />
             }
             else if (CurrentGame is MemoryEngine memory)
             {
