--- a/QuickFun/QuickFun.Web/Pages/Home.razor
+++ b/QuickFun/QuickFun.Web/Pages/Home.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
+@using QuickFun.Web.Layout.ProductSliderComponent
 
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+try our amazing games
+
+<ProductSlider />
