--- a/QuickFun/QuickFun.Web/Layout/ProductSliderComponent/ProductSlider.razor
+++ b/QuickFun/QuickFun.Web/Layout/ProductSliderComponent/ProductSlider.razor
@@ -14,7 +14,7 @@
                         <h3>@item.Name</h3>
                         <p class="category">@item.Category</p>
                         <NavLink class="nav-link" href=@item.href>
-                            <button class="btn-play">Graj teraz</button>
+                            <button class="btn-play">Play now</button>
                         </NavLink>
 
                     </div>
@@ -46,12 +46,13 @@
 
     private List<GameItem> sampleGames = new()
 {
-new GameItem { Id = 1, Name = "Memory", Category = "Logiczne", ImageUrl = "/images/games/brain-circuit.svg"
-,href="/game/memory"},
-new GameItem { Id = 2, Name = "Kółko i Krzyżyk", Category = "Strategiczne",href="/game/tictactoe" },
-new GameItem { Id = 2, Name = "Kółko i Krzyżyk vs AI", Category = "Strategiczne", href="/game/tictactoewithai" },
-new GameItem { Id = 4, Name = "Saper", Category = "Klasyczne",href="/game/minesweeper" },
-new GameItem { Id = 5, Name = "Sudoku", Category = "Logiczne", href="/game/sudoku" },
+
+new GameItem { Id = 1, Name = "Memory", Category = "Logic", ImageUrl = "/images/games/memory.png", href="/game/memory"},
+new GameItem { Id = 2, Name = "Tic Tac Toe", Category = "Strategy",  ImageUrl = "/images/games/tictactoe.png", href="/game/tictactoe" },
+new GameItem { Id = 3, Name = "Sudoku", Category = "Logic", ImageUrl = "/images/games/sudoku.png", href="/game/sudoku" },
+new GameItem { Id = 4, Name = "Minesweeper", Category = "Classic", ImageUrl = "/images/games/minesweeper.png", href="/game/minesweeper" },
+new GameItem { Id = 5, Name = "Tic Tac Toe vs AI", Category = "Strategy", ImageUrl = "/images/games/tictactoeAI.png", href="/game/tictactoewithai" },
+new GameItem { Id = 6, Name = "Hangman", Category = "Word", href="/game/hangman", ImageUrl = "/images/games/hangman.png" }
 };
 
 }
