--- a/QuickFun/QuickFun.Web/Components/Views/HangmanView.razor
+++ b/QuickFun/QuickFun.Web/Components/Views/HangmanView.razor
@@ -4,7 +4,7 @@
 <div class="hangman-container">
     @if (Engine == null)
     {
-        <p>Ładowanie gry...</p>
+        <p>Loading...</p>
     }
     else
     {
