--- a/QuickFun/QuickFun.Web/Components/Views/MinesweeperView.razor
+++ b/QuickFun/QuickFun.Web/Components/Views/MinesweeperView.razor
@@ -12,11 +12,11 @@
         </div>
         <div class="stats-bar">
             <div class="stat-item">
-                <span class="label">PUNKTY</span>
+                <span class="label">POINTS</span>
                 <span class="value">@Engine.Score</span>
             </div>
             <div class="stat-item">
-                <span class="label">MINY</span>
+                <span class="label">MINES</span>
                 <span class="value">20</span>
             </div>
         </div>
@@ -67,7 +67,7 @@
     {
         <div class="saper-footer">
             <button class="btn-reset" @onclick="Engine.Reset">
-                🔄 ZAGRAJ PONOWNIE
+                🔄 Play again
             </button>
         </div>
     }
